interfaces/Plush/templates/static/stylesheets/colorschemes/gold/gold.css
/* ... */
	
	table.nzoTable th,
	table.nzoTable td {
	  border:1px solid #999;
	  padding:3px 5px;
	}
	table.nzoTable td.alignRight {
	  text-align:right;
	}
	table.nzoTable td.filename {
	  width:95%;
	}
	table.nzoTable th.check,
	table.nzoTable td.check {
	  width:22px;
	}	
	
.nzo_save_form { margin-left: 120px; }
 
	.nzo_save_form div {
		display: inline;
		white-space: nowrap;
	}
 
/* ---------------------------------------------------------------------------------------------------------------
------------------------------------------------------------------------------------------------------------------
 
    C O N F I G
 
------------------------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------------------- */

#config_container {
	background: #363636;
	font-size:95%;
	min-height: 345px;
	padding-left: 20px;
	padding: 10px;
	text-align: left;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
}
#config_content {
	overflow: hidden;
	width: 100%;
}
  #config_content .catheaderinfo { font-weight:bold;}
 
#config_go_back {
	padding: 1px;
	text-align: center;
}
 
	#config_go_back div {
		margin-bottom: -4px;
		margin: auto;
		padding: 25px 0 4px 20px;
		width: 80px;
	}
 
	#config_go_back a {
		color: black;
		font-size: 66%;
		margin-left: -20px;
		padding: 30px 10px 0px 40px;
		text-decoration: none;
	}
 
		#config_go_back a:hover { border-bottom: 1px dotted black; }
 
div.EntryBlock form { display: inline; }
div.EntryBlock {

} 
fieldset.EntryFieldSet {
  border:1px solid #333;
	display: inline;
	float: left;
	margin: 5px;
	padding: 7px 7px 10px;
	vertical-align: top;
} 
.add-rss fieldset.EntryFieldSet {
	width:97%;
}
  .add-rss fieldset.EntryFieldSet .feedname{
    font-weight:bold;
  	width:20%;
  }
  .add-rss fieldset.EntryFieldSet .feeduri{
  	width:70%;
  }
  .add-rss fieldset.EntryFieldSet .inputsubmit{
  	width:6%;
  }
  .update-rss fieldset.EntryFieldSet .feeduri{
  	width:99%;
  }
.catTable {
  width:99%;
}
  .catTable th,
  .catTable td {
    padding:3px 3px 5px;
  }
  .catTable th {
    font-weight:bold;
  }
  .catTable tr.odd {
  	background-color:#ddd;
  }
  .catTable td.lastCol {
	width:8%;
  }

.rssTable { border-spacing: 1px; }
  .rssTable th,
  .rssTable td {
    padding:3px 3px 5px;
  }
  .rssTable th {
	background-color:#555;
	color:#FFF;
	font-weight:bold;
  }
  .rssTable tr {
	background-color:#eee;
  }
  .rssTable tr.odd {
  	background-color:#ddd;
  }


/* Vertical Tabs - adapted from http://jquery-ui.googlecode.com/svn/trunk/demos/tabs/vertical.html
----------------------------------
.ui-tabs-vertical { width: 100%; }
.ui-tabs-vertical .ui-tabs-nav { padding: .2em .1em .2em .2em; float: left; width: 11em; margin-right:10px;}
.ui-tabs-vertical .ui-tabs-nav li { clear: left; width: 100%; border-bottom-width: 1px !important; border-right-width: 0 !important; margin: 0 -1px .2em 0; }
.ui-tabs-vertical .ui-tabs-nav li a { display:block; width:12em; }
.ui-tabs-vertical .ui-tabs-nav li.ui-tabs-selected { padding-bottom: 0; padding-right: .1em; border-right-width: 1px; border-right-width: 1px; }
.ui-tabs-vertical .ui-tabs-panel { padding: 1em; }
*/


#schedulingTable td, #switchesTable td {
    padding:3px 3px 5px;
}
.alignRight {
	text-align: right;
	padding-right: 4px;
}

.config_nav {
	float: left;
	margin-top: 20px;
	text-align: left;
	width: 84px; 
}
.config_nav.lang-de-de {
	width: 140px; 
}
 
	.config_nav ul {
		border: none;
		list-style: none;
		margin: 0;
		padding: 0;
	}
 
	.config_nav li {
		margin: 0;
		padding: 3px 0px 3px 5px;
	}
 
		.config_nav li a {
			background-color: #b1b1b1;
			color: #363636;
			display: block;
			font-size: 9pt;
			font-weight: bold;
			padding: 4px 22px 4px 4px;
			text-decoration: none;
			width: 100%;
			border-radius: 10px 0px 0px 10px;
			-moz-border-radius: 10px 0px 0px 10px;
			-webkit-border-top-right-radius: 0px;
			-webkit-border-bottom-right-radius: 0px;
		}
 
			.config_nav li a .config_sprite_container {
				margin: 3px 0px 3px 0px;
				padding-left: 22px;
				padding-bottom: 1px;
				width: 100%;
			}
 
			.config_nav li:hover a, .config_nav li a:hover {
				background-color: #ccc;
				color: #000;
			}
 
	.config_nav .nav_active {
		background-color: #363636;
		color: #fff;
	}

legend .config_sprite_container {
	display: inline;
	padding: 0px 0px 0px 16px;
}
 
#config_content legend {
	background-color: #333;
	color: white;
	font-weight: bold;
	padding: 2px 6px 2px 6px;
}

#config_content legend.latestWarnings,
#config_content legend.lastEmail,
#config_content legend.serverBackup { background-color:#00008B; }
#config_content legend.serverOptional { background-color:#009090; }
#config_content legend.serverEnabled { background-color:#006400; }
#config_content legend.serverDisabled { background-color:#8B0000; }
#config_content legend.feedEnabled { background-color:#006400; }
#config_content legend.feedDisabled { background-color:#8B0000; }

 
/* sprite-config.png */
.config_sprite_container { background: url('images/sprite-config.png') no-repeat top left; }

.sprite_config_connections_disconnect { background-position: 0 0; width: 22px; height: 22px; } 
.sprite_config_connections_encrypted { background-position: 0 -32px; width: 16px; height: 16px; } 
.sprite_config_connections_unencrypted { background-position: 0 -58px; width: 16px; height: 16px; } 
.sprite_config_connections_warnings { background-position: 0 -84px; width: 16px; height: 16px; } 
.sprite_config_email_account_settings { background-position: 0 -110px; width: 16px; height: 16px; } 
.sprite_config_email_options, .sprite_config_nav_email { background-position: 0 -136px; width: 16px; height: 16px; } 
.sprite_config_email_test { background-position: 0 -162px; width: 22px; height: 22px; } 
.sprite_config_folders_system { background-position: 0 -194px; width: 16px; height: 16px; } 
/* ... */

